--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-  "name": "instagram-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/main.js",
-    "build": "tsc",
-    "dev": "nodemon",
-    "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/mongoose": "^5.11.97",
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-validator": "^6.14.1",
-    "inversify": "^6.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.6.0",
-    "mongoose": "^6.3.4",
-    "nodemailer": "^6.7.5",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.8.0",
-    "tslog": "^3.3.3",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.36",
-    "@types/nodemailer": "^6.4.4",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "eslint": "^8.16.0",
-    "nodemon": "^2.0.16",
-    "typescript": "^4.7.2"
-  }
+	"name": "instagram-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node ./dist/main.js",
+		"build": "tsc",
+		"lint": "eslint ./src/**",
+		"lint:fix": "eslint ./src/** --fix",
+		"dev": "nodemon",
+		"dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@types/mongoose": "^5.11.97",
+		"bcrypt": "^5.0.1",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"express-validator": "^6.14.1",
+		"inversify": "^6.0.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongodb": "^4.6.0",
+		"mongoose": "^6.3.4",
+		"nodemailer": "^6.7.5",
+		"reflect-metadata": "^0.1.13",
+		"ts-node": "^10.8.0",
+		"tslog": "^3.3.3",
+		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/node": "^17.0.36",
+		"@types/nodemailer": "^6.4.4",
+		"@types/uuid": "^8.3.4",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"nodemon": "^2.0.16",
+		"prettier": "^2.6.2",
+		"typescript": "^4.7.2"
+	}
 }
