--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "tsc",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix",
-		"dev": "nodemon",
+		"dev": "nodemon main.ts",
 		"dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts"
 	},
 	"author": "",
@@ -23,6 +23,7 @@
 		"express": "^4.18.1",
 		"express-validator": "^6.14.1",
 		"inversify": "^6.0.1",
+		"inversify-express-utils": "^6.4.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^4.6.0",
 		"mongoose": "^6.3.4",
@@ -37,7 +38,7 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
-		"@types/node": "^17.0.36",
+		"@types/node": "^17.0.42",
 		"@types/nodemailer": "^6.4.4",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -47,6 +48,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"nodemon": "^2.0.16",
 		"prettier": "^2.6.2",
+		"tslib": "^2.4.0",
 		"typescript": "^4.7.2"
 	}
 }
